[package]
name = "smp"
version = "0.0.3"
authors = ["Devknot <devknot.asm@gmail.com>"]
readme = "README.md"
#license = "MIT"
license-file = "license"
edition = "2021"
description = "aleatorização de posição da memória"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

